# MCP-server

./: .gitignore  README.md  pyproject.toml  server.py  test.py
src/: __init__.py  files.py  service.py  utils.py  web_search.py
